--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,7 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=.\\TAI;Database=QLCHBanDienThoaiMoi;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
-  },
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=DESKTOP-28BPVH8\\SQLEXPRESS;Database=QLCHBanDienThoaiMoi;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+    },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
