--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,8 @@
 {
-    "ConnectionStrings": {
-        "DefaultConnection": ".\\;Database=QLCHBanDienThoaiMoi;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
-    },
+  "ConnectionStrings": {
+    //"DefaultConnection": "DESKTOP-UPQS4H9\\SQLEXPRESS;Database=QLCHBanDienThoaiMoi;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+    "DefaultConnection": "Server=DESKTOP-UPQS4H9\\SQLEXPRESS;Database=QLCHBanDienThoaiMoi;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
